#207 long text wraps correctly in dropdown

--- a/theme/css/acute.select.css
+++ b/theme/css/acute.select.css
@@ -15,15 +15,14 @@ td.ac-select-longest {
 
 div.ac-select-popup {
     position: absolute;
-    z-index: 5000;
     background-color: white;
     margin-top: 3px;
     margin-left: -1px;
     width: 100%;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
     border: 1px solid #ccc;
     border: 1px solid rgba(0, 0, 0, .15);
-    border-radius-bottom-right: 4px;
-    border-radius-bottom-left: 4px;
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
             box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
